--- a/public/index.html
+++ b/public/index.html
@@ -32,14 +32,14 @@
                 <button class="icon-btn" onclick="showStats()" title="Statistics">
                     <i data-lucide="bar-chart-3"></i>
                 </button>
-                <button class="icon-btn" onclick="showFloatingWidget()" title="Floating timer" id="floatingWidgetBtn">
-                    <i data-lucide="square"></i>
-                </button>
                 <button class="icon-btn" onclick="showSettings()" title="Settings">
                     <i data-lucide="settings"></i>
                 </button>
                 <button class="icon-btn" onclick="showAbout()" title="About">
                     <i data-lucide="info"></i>
+                </button>
+                <button class="icon-btn" onclick="openFloatingWindow()" title="Open in Window" id="floatingWindowBtn">
+                    <i data-lucide="external-link"></i>
                 </button>
             </div>
         </div>
