Change class attribute to class_name in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -278,24 +278,24 @@
                     <span>Sunset</span>
                     <div class="theme-dots">
                         <span class="theme-dot" style="background: #1a1625;"></span>
-                        <span class="theme-dot" style="background: #553c9a;"></span>
-                        <span class="theme-dot" style="background: #f59e0b;"></span>
+                        <span class_name="theme-dot" style="background: #553c9a;"></span>
+                        <span class_name="theme-dot" style="background: #f59e0b;"></span>
                     </div>
                 </button>
                 <button class="theme-option" data-theme="purple" onclick="setTheme('purple')" onmouseenter="previewTheme('purple')" onmouseleave="revertTheme()">
                     <span>Purple</span>
                     <div class="theme-dots">
                         <span class="theme-dot" style="background: #1e1b4b;"></span>
-                        <span class="theme-dot" style="background: #3730a3;"></span>
-                        <span class="theme-dot" style="background: #a855f7;"></span>
+                        <span class_name="theme-dot" style="background: #3730a3;"></span>
+                        <span class_name="theme-dot" style="background: #a855f7;"></span>
                     </div>
                 </button>
                 <button class="theme-option" data-theme="rose" onclick="setTheme('rose')" onmouseenter="previewTheme('rose')" onmouseleave="revertTheme()">
                     <span>Rose</span>
                     <div class="theme-dots">
                         <span class="theme-dot" style="background: #1f0f1a;"></span>
-                        <span class="theme-dot" style="background: #5a2f42;"></span>
-                        <span class="theme-dot" style="background: #ec4899;"></span>
+                        <span class_name="theme-dot" style="background: #5a2f42;"></span>
+                        <span class_name="theme-dot" style="background: #ec4899;"></span>
                     </div>
                 </button>
                 <button class="theme-option" data-theme="blush" onclick="setTheme('blush')" onmouseenter="previewTheme('blush')" onmouseleave="revertTheme()">
